--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -177,3 +177,20 @@ jobs:
         if grep -r "curl.*-k\|wget.*--no-check-certificate" --include="*.sh" .; then
           echo "⚠ Warning: Insecure HTTP requests found"
         fi
+
+  notify-owner:
+    runs-on: ubuntu-latest
+    needs: [test, lint, security-scan]
+    if: github.event_name == 'push' && github.actor == 'VocabVictor'
+    steps:
+    - name: Direct push notification
+      run: |
+        if [ "${{ needs.test.result }}" == "success" ] && [ "${{ needs.lint.result }}" == "success" ] && [ "${{ needs.security-scan.result }}" == "success" ]; then
+          echo "✅ 所有者直接推送成功 - 所有测试通过"
+          echo "Commit: ${{ github.sha }}"
+          echo "Message: ${{ github.event.head_commit.message }}"
+        else
+          echo "❌ 所有者直接推送 - 测试失败"
+          echo "请检查失败的测试并修复问题"
+          exit 1
+        fi
